View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028446 | Open CASCADE | OCCT:Application Framework | public | 2017-02-07 16:40 | 2017-09-29 16:25 |
Reporter | szy | Assigned To | bugmaster | ||
Priority | normal | Severity | major | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.1.0 | ||||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028446: Could not retrieve just kept document with Integer attribute | ||||
Description | If we set several Integer attributes to the same label in specific order - first with default guid and after with specific guid - the document can't be retrieved. If creation order is changed - all is ok. | ||||
Steps To Reproduce | pload ALL NewDocument D XmlOcaf SetInteger D 0:1 121 set aGuid1 "12e94551-6dbc-11d4-b9c8-0060b0ee281b" SetInteger D 0:1 129 ${aGuid1} GetInteger D 0:1 GetInteger D 0:1 ${aGuid1} SaveAs D test1.xml Close D Open test1.xml D This label has already such an attribute. could not retrieve DDocStd_Open : Error | ||||
Tags | No tags attached. | ||||
Test case number | caf basic A7, B7, E7, N7 | ||||
|
Branch CR28446 has been created by szy. SHA-1: 3464f31863a063d02d2a3a300f7af1bb912bb1c2 Detailed log of new commits: Author: szy Date: Wed Feb 8 18:31:01 2017 +0300 28446: Could not retrieve just kept document with Integer attribute. The same problem is fixed in Real, Name and AsciiString attributes. Tests A7, B7, E7, N7 are added. |
|
Review it, please. |
|
Reviewed, please, test. |
|
Please reconsider this change: package TDF may not depend on higher-level TDataStd |
|
Branch CR28446_1 has been created by szy. SHA-1: 728933d05efb5ebf3907ee75634f820ff94063a2 Detailed log of new commits: Author: szy Date: Thu Mar 9 16:28:44 2017 +0300 28446: Could not retrieve just kept document with Integer attribute. The solution is modified. Additional tests to check the solution: A7, B7, E7, N7. |
|
Review it, please. |
|
Reviewed. Please, test. |
|
Dear BugMaster, Branch CR28446_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 728933d05efb5ebf3907ee75634f820ff94063a2 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 5 (0 on master) products component : Linux: 64 (64 on master) Windows: 0 (0 on master) MacOS : 1215 There is new additional compilation warning on MacOS platform: http://jenkins-test-07.nnov.opencascade.com:8080/user/mnt/my-views/view/A_mnt_warnings/portlet/dashboard_portlet_13912/job/CR28446_1-master-OCCT-MacOS-opt-compile/1/warnings7Result/ TDataStd_AsciiString.hxx:65, Clang (LLVM based), Priority: Normal 'SetID' overrides a member function but is not marked 'override' TDataStd_Integer.hxx:64, Clang (LLVM based), Priority: Normal 'SetID' overrides a member function but is not marked 'override' TDataStd_Name.hxx:84, Clang (LLVM based), Priority: Normal 'SetID' overrides a member function but is not marked 'override' TDataStd_Real.hxx:75, Clang (LLVM based), Priority: Normal 'SetID' overrides a member function but is not marked 'override' TDataStd_UAttribute.hxx:53, Clang (LLVM based), Priority: Normal 'SetID' overrides a member function but is not marked 'override' Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR28446_1-master-OCCT/Debian70-64/caf/basic/A7.html http://occt-tests/CR28446_1-master-OCCT/Windows-64-VC10/caf/basic/A7.html caf basic A7: OK http://occt-tests/CR28446_1-master-OCCT/Debian70-64/caf/basic/B7.html http://occt-tests/CR28446_1-master-OCCT/Windows-64-VC10/caf/basic/B7.html caf basic B7: OK http://occt-tests/CR28446_1-master-OCCT/Debian70-64/caf/basic/E7.html http://occt-tests/CR28446_1-master-OCCT/Windows-64-VC10/caf/basic/E7.html caf basic E7: OK http://occt-tests/CR28446_1-master-OCCT/Debian70-64/caf/basic/N7.html http://occt-tests/CR28446_1-master-OCCT/Windows-64-VC10/caf/basic/N7.html caf basic N7: OK Testing on Linux: occt component : Total MEMORY difference: 92787496 / 92370907 [+0.45%] Total CPU difference: 19994.050000000167 / 19841.240000000398 [+0.77%] products component : Total MEMORY difference: 31025480 / 31147739 [-0.39%] Total CPU difference: 5514.269999999986 / 5456.869999999986 [+1.05%] Testing on Windows: occt component : Total MEMORY difference: 57671661 / 57663643 [+0.01%] Total CPU difference: 18642.259900898556 / 18635.5206576986 [+0.04%] products component : Total MEMORY difference: 22289663 / 22249574 [+0.18%] Total CPU difference: 5487.662777099967 / 5512.435735899986 [-0.45%] There are no differences in images found by testdiff. |
|
Dear szy, Branch CR28446_1 has been rejected due to: - additional warnings |
|
Branch CR28446_2 has been created by szy. SHA-1: 5a0adb72e04848dc9415b31971be9c4784de9b27 Detailed log of new commits: Author: szy Date: Thu Mar 16 15:16:21 2017 +0300 28446: Could not retrieve just kept document with Integer attribute. The solution is changed to new one. |
|
Review it, please. |
|
Reviewed, please, test. |
|
Dear szy, could you please rebase branch CR28446 on branch CR27970_2, see 0027970 . |
|
Branch CR28446_3 has been created by szy. SHA-1: 4a806718ba69a30d357e8b6bab60c8a7be3c7713 Detailed log of new commits: Author: szy Date: Tue May 23 15:14:51 2017 +0300 0028446: Rebased on 27970_9. //all last remarks are taken into account. |
|
Fixed. Review, please. |
|
Dear BugMaster, Branch CR28446_3 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 4a806718ba69a30d357e8b6bab60c8a7be3c7713 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 64 (64 on master) Windows: 0 (0 on master) MacOS : 1189 Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR28446_3-master-OCCT/Debian70-64/caf/basic/A7.html http://occt-tests/CR28446_3-master-OCCT/Windows-64-VC10/caf/basic/A7.html caf basic A7: OK http://occt-tests/CR28446_3-master-OCCT/Debian70-64/caf/basic/B7.html http://occt-tests/CR28446_3-master-OCCT/Windows-64-VC10/caf/basic/B7.html caf basic B7: OK http://occt-tests/CR28446_3-master-OCCT/Debian70-64/caf/basic/E7.html http://occt-tests/CR28446_3-master-OCCT/Windows-64-VC10/caf/basic/E7.html caf basic E7: OK http://occt-tests/CR28446_3-master-OCCT/Debian70-64/caf/basic/N7.html http://occt-tests/CR28446_3-master-OCCT/Windows-64-VC10/caf/basic/N7.html caf basic N7: OK Testing on Linux: occt component : Total MEMORY difference: 92406074 / 91624311 [+0.85%] Total CPU difference: 18946.61000000026 / 18660.990000000344 [+1.53%] products component : Total MEMORY difference: 31243251 / 31347866 [-0.33%] Total CPU difference: 5461.26999999999 / 5401.239999999972 [+1.11%] Testing on Windows: occt component : Total MEMORY difference: 58430918 / 58426283 [+0.01%] Total CPU difference: 17431.879342098648 / 17319.43382129878 [+0.65%] products component : Total MEMORY difference: 22719590 / 22681228 [+0.17%] Total CPU difference: 5404.311442799981 / 5370.256424499971 [+0.63%] There are no differences in images found by testdiff. |
|
Dear BugMaster, Branch CR28446_3 is TESTED. |
|
Branch CR28446 has been deleted by kgv. SHA-1: 3464f31863a063d02d2a3a300f7af1bb912bb1c2 |
|
Branch CR28446_1 has been deleted by kgv. SHA-1: 728933d05efb5ebf3907ee75634f820ff94063a2 |
|
Branch CR28446_2 has been deleted by kgv. SHA-1: 5a0adb72e04848dc9415b31971be9c4784de9b27 |
|
Branch CR28446_3 has been deleted by kgv. SHA-1: 4a806718ba69a30d357e8b6bab60c8a7be3c7713 |
occt: master e2fc87e7 2017-05-23 12:14:51 Committer: bugmaster Details Diff |
0028446: Could not retrieve just kept document with Integer attribute |
Affected Issues 0028446 |
|
mod - src/TDataStd/TDataStd_AsciiString.cxx | Diff File | ||
mod - src/TDataStd/TDataStd_Integer.cxx | Diff File | ||
mod - src/TDataStd/TDataStd_Name.cxx | Diff File | ||
mod - src/TDataStd/TDataStd_Real.cxx | Diff File | ||
add - tests/caf/basic/A7 | Diff File | ||
add - tests/caf/basic/B7 | Diff File | ||
add - tests/caf/basic/E7 | Diff File | ||
add - tests/caf/basic/N7 | Diff File | ||
occt: master 69f1a899 2017-05-23 12:14:51 Committer: bugmaster Details Diff |
0028446: Could not retrieve just kept document with Integer attribute |
Affected Issues 0028446 |
|
mod - src/TDataStd/TDataStd_AsciiString.cxx | Diff File | ||
mod - src/TDataStd/TDataStd_Integer.cxx | Diff File | ||
mod - src/TDataStd/TDataStd_Name.cxx | Diff File | ||
mod - src/TDataStd/TDataStd_Real.cxx | Diff File | ||
add - tests/caf/basic/A7 | Diff File | ||
add - tests/caf/basic/B7 | Diff File | ||
add - tests/caf/basic/E7 | Diff File | ||
add - tests/caf/basic/N7 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-02-07 16:40 | szy | New Issue | |
2017-02-07 16:40 | szy | Assigned To | => szy |
2017-02-07 16:41 | szy | Status | new => assigned |
2017-02-08 18:31 | git | Note Added: 0063712 | |
2017-02-08 18:33 | szy | Note Added: 0063713 | |
2017-02-08 18:33 | szy | Assigned To | szy => mpv |
2017-02-08 18:33 | szy | Status | assigned => resolved |
2017-02-09 11:01 | mpv | Note Added: 0063720 | |
2017-02-09 11:01 | mpv | Assigned To | mpv => bugmaster |
2017-02-09 11:01 | mpv | Status | resolved => reviewed |
2017-02-09 11:39 |
|
Assigned To | bugmaster => mkv |
2017-02-09 14:23 | abv | Relationship added | related to 0027970 |
2017-02-09 14:24 | abv | Note Added: 0063733 | |
2017-02-09 14:24 | abv | Status | reviewed => assigned |
2017-02-09 16:19 |
|
Assigned To | mkv => szy |
2017-03-09 16:29 | git | Note Added: 0064205 | |
2017-03-09 16:30 | szy | Note Added: 0064206 | |
2017-03-09 16:30 | szy | Assigned To | szy => mpv |
2017-03-09 16:30 | szy | Status | assigned => resolved |
2017-03-09 19:45 | mpv | Note Added: 0064220 | |
2017-03-09 19:45 | mpv | Assigned To | mpv => bugmaster |
2017-03-09 19:45 | mpv | Status | resolved => reviewed |
2017-03-10 14:55 |
|
Assigned To | bugmaster => mkv |
2017-03-13 13:08 |
|
Note Added: 0064264 | |
2017-03-13 13:08 |
|
Note Added: 0064265 | |
2017-03-13 13:08 |
|
Assigned To | mkv => szy |
2017-03-13 13:08 |
|
Status | reviewed => assigned |
2017-03-13 13:08 |
|
Test case number | => caf basic A7, B7, E7, N7 |
2017-03-16 15:16 | git | Note Added: 0064383 | |
2017-03-16 15:17 | szy | Note Added: 0064384 | |
2017-03-16 15:17 | szy | Assigned To | szy => mpv |
2017-03-16 15:17 | szy | Status | assigned => resolved |
2017-03-21 16:01 | mpv | Note Added: 0064581 | |
2017-03-21 16:01 | mpv | Assigned To | mpv => bugmaster |
2017-03-21 16:01 | mpv | Status | resolved => reviewed |
2017-03-21 16:39 |
|
Assigned To | bugmaster => mkv |
2017-03-21 16:57 |
|
Note Added: 0064583 | |
2017-03-21 16:57 |
|
Assigned To | mkv => szy |
2017-03-21 16:57 |
|
Status | reviewed => assigned |
2017-05-23 15:15 | git | Note Added: 0066470 | |
2017-05-23 15:16 | szy | Note Added: 0066471 | |
2017-05-23 15:16 | szy | Assigned To | szy => vro |
2017-05-23 15:16 | szy | Status | assigned => resolved |
2017-05-24 07:27 | vro | Assigned To | vro => bugmaster |
2017-05-24 07:27 | vro | Status | resolved => reviewed |
2017-05-24 11:17 |
|
Assigned To | bugmaster => mkv |
2017-05-25 11:28 |
|
Note Added: 0066545 | |
2017-05-25 11:28 |
|
Note Added: 0066546 | |
2017-05-25 11:28 |
|
Assigned To | mkv => bugmaster |
2017-05-25 11:28 |
|
Status | reviewed => tested |
2017-05-26 14:28 | bugmaster | Changeset attached | => occt master e2fc87e7 |
2017-05-26 14:29 | bugmaster | Status | tested => verified |
2017-05-26 14:29 | bugmaster | Resolution | open => fixed |
2017-05-26 14:56 | bugmaster | Changeset attached | => occt master 69f1a899 |
2017-05-29 16:05 | git | Note Added: 0066755 | |
2017-05-29 16:05 | git | Note Added: 0066756 | |
2017-05-29 16:05 | git | Note Added: 0066757 | |
2017-05-29 16:05 | git | Note Added: 0066758 | |
2017-09-29 16:18 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:25 |
|
Status | verified => closed |