0028446: Could not retrieve just kept document with Integer attribute